IR test cases